actualizacion de breaf et 4

--- a/pages/index.css
+++ b/pages/index.css
@@ -6,3 +6,85 @@
   font-size: 16px;
   line-height: 20px;
 }
+
+.header {
+  background-color: #ffffff;
+  background-image: url(../images/background_header.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  min-height: 720px;
+  max-height: 800px;
+  height: 100vh;
+  position: relative;
+  padding: 30px 40px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 30px;
+}
+
+.nav__logo {
+  position: relative;
+}
+
+.nav__links {
+  display: flex;
+  gap: 20px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav__link {
+  text-decoration: none;
+  color: #000000;
+  font-weight: 500;
+}
+
+.header__title {
+  font-family: "Inter", Arial, sans-serif;
+  color: #000000;
+  font-size: 72px;
+  line-height: 76px;
+  font-weight: 500;
+  margin: 0;
+  z-index: 2;
+  margin-top: auto;
+  width: 500px;
+}
+
+.header__title span {
+  display: block;
+}
+
+.header__span-accent {
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: italic;
+  color: #2f80ed;
+  display: block;/
+}
+
+.header__description {
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  max-width: 400px;
+  margin-top: 30px;
+  margin-bottom: 80px;
+  z-index: 1;
+}
+
+.header__image {
+  position: absolute;
+  top: 124px;
+  right: 40px;
+  max-width: 650px;
+  z-index: 0;
+}
