--- a/pages/index.css
+++ b/pages/index.css
@@ -40,6 +40,11 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .nav__link {
@@ -50,9 +55,11 @@
 
 .header__title {
   font-family: "Inter", Arial, sans-serif;
-  color: #000000;
-  font-size: 72px;
-  line-height: 76px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 58px;
+  line-height: 72px;
+  letter-spacing: -1px;
   font-weight: 500;
   margin: 0;
   z-index: 2;
@@ -67,14 +74,19 @@
 .header__span-accent {
   font-family: "Noto Serif", "Times New Roman", serif;
   font-style: italic;
+  font-weight: normal;
+  font-size: 58px;
+  line-height: 74px;
   color: #2f80ed;
   display: block;/
 }
 
 .header__description {
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
   max-width: 400px;
   margin-top: 30px;
   margin-bottom: 80px;
@@ -87,4 +99,100 @@
   right: 40px;
   max-width: 650px;
   z-index: 0;
+}
+
+.header__footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 100%;
+  margin-top: auto;
+  z-index: 1;
+}
+
+.header__paragraph {
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  margin: 0;
+  color: #838383;
+}
+
+.header__hours .header__paragraph:first-child {
+  margin-bottom: 10px;
+}
+
+.header__address {
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  margin: 0;
+  color: #838383;
+}
+
+.recipes {
+background-color: #0a2750;
+background-image: url(../images/background_recipes.svg);
+background-repeat:no-repeat;
+background-position: center;
+background-size: cover;
+padding-top: 100px;
+padding-bottom: 80px;
+color: #ffffff;
+}
+
+.recipes__title {
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  max-width: 580px;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  margin: 0;
+  margin-bottom: 24px;
+  padding-left: 80px;
+  text-align: left;
+}
+
+.recipes__subtitle {
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  max-width: 430px;
+  margin: 0;
+  margin-bottom: 60px;
+  text-align: left;
+  padding-left: 80px;
+}
+
+.recipes__videos {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  margin-top: 40px;
+  flex-wrap: wrap;
+}
+
+.recipes__video-caption {
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 24px;
+
+}
+
+.recipes__iframe {
+  border: none;
+  width: 480px;
+  height: 273px;
 }
