--- a/pages/index.css
+++ b/pages/index.css
@@ -117,21 +117,11 @@
   font-size: 16px;
   line-height: 20px;
   margin: 0;
-  color: #838383;
+  color: #6f6f6f;
 }
 
 .header__hours .header__paragraph:first-child {
   margin-bottom: 10px;
-}
-
-.header__address {
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  margin: 0;
-  color: #838383;
 }
 
 .recipes {
@@ -177,6 +167,12 @@ color: #ffffff;
   gap: 40px;
   margin-top: 40px;
   flex-wrap: wrap;
+}
+
+.recipes__iframe {
+  border: none;
+  width: 480px;
+  height: 273px;
 }
 
 .recipes__video-caption {
