--- a/pages/index.css
+++ b/pages/index.css
@@ -192,3 +192,110 @@ color: #ffffff;
   width: 480px;
   height: 273px;
 }
+
+.reservation {
+  background-color: #D9E7FF;
+  background-image: url(../images/background_reservation.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding-top: 100px;
+  padding-bottom: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.reservation__title {
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  margin: 0;
+  margin-bottom: 80px;
+}
+
+.form {
+  max-width: 385px;
+  width: 100%;
+}
+
+.form__fieldset {
+  border: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.form__label {
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 8px; /* Espacio entre label e input [cite: 111] */
+  display: block;
+}
+
+.form__input {
+  width: 100%;
+  height: 60px;
+  background-color: #ffffff;
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  line-height: 30px;
+  padding: 0px;
+  margin-bottom: 32px;
+  border: 1px solid #838383;
+  border-radius: 4px;
+  box-sizing: border-box;
+  padding-left: 10px;
+}
+
+.form__input::placeholder {
+  color: #838383;
+}
+
+.form__button {
+  width: 100%;
+  height: 60px;
+  background-color: #2F80ED;
+  color: #ffffff;
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 28px;
+  margin-bottom: 32px;
+  transition: opacity 0.3s ease;
+}
+
+.form__button:hover {
+  opacity: 0.7;
+}
+
+.form__label_type_checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 0;
+  cursor: pointer;
+}
+
+.form__checkbox {
+  width: 20px;
+  height: 20px;
+  margin-right: 12px;
+  border-radius: 2px;
+}
+
+.form__checkbox-text {
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+}
