--- a/pages/index.css
+++ b/pages/index.css
@@ -203,17 +203,18 @@ color: #ffffff;
   padding-bottom: 120px;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .reservation__title {
   font-family: "Inter", sans-serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
-  margin: 0;
+  text-align: center;
+  margin-top: 0;
   margin-bottom: 80px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .form {
