acomodo a estilo BEM

--- a/pages/index.css
+++ b/pages/index.css
@@ -1,304 +1,7 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: auto;
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.header {
-  background-color: #ffffff;
-  background-image: url(../images/background_header.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  min-height: 720px;
-  max-height: 800px;
-  height: 100vh;
-  position: relative;
-  padding: 30px 40px;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 30px;
-}
-
-.nav__logo {
-  position: relative;
-}
-
-.nav__links {
-  display: flex;
-  gap: 20px;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.nav__link {
-  text-decoration: none;
-  color: #000000;
-  font-weight: 500;
-}
-
-.header__title {
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 58px;
-  line-height: 72px;
-  letter-spacing: -1px;
-  font-weight: 500;
-  margin: 0;
-  z-index: 2;
-  margin-top: auto;
-  width: 500px;
-}
-
-.header__title span {
-  display: block;
-}
-
-.header__span-accent {
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: italic;
-  font-weight: normal;
-  font-size: 58px;
-  line-height: 74px;
-  color: #2f80ed;
-  display: block;/
-}
-
-.header__description {
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  max-width: 400px;
-  margin-top: 30px;
-  margin-bottom: 80px;
-  z-index: 1;
-}
-
-.header__image {
-  position: absolute;
-  top: 124px;
-  right: 40px;
-  max-width: 650px;
-  z-index: 0;
-}
-
-.header__footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  width: 100%;
-  margin-top: auto;
-  z-index: 1;
-}
-
-.header__paragraph {
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  margin: 0;
-  color: #6f6f6f;
-}
-
-.header__hours .header__paragraph:first-child {
-  margin-bottom: 10px;
-}
-
-.recipes {
-background-color: #0a2750;
-background-image: url(../images/background_recipes.svg);
-background-repeat:no-repeat;
-background-position: center;
-background-size: cover;
-padding-top: 100px;
-padding-bottom: 80px;
-color: #ffffff;
-}
-
-.recipes__title {
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  max-width: 580px;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  margin: 0;
-  margin-bottom: 24px;
-  padding-left: 80px;
-  text-align: left;
-}
-
-.recipes__subtitle {
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  max-width: 430px;
-  margin: 0;
-  margin-bottom: 60px;
-  text-align: left;
-  padding-left: 80px;
-}
-
-.recipes__videos {
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-  margin-top: 40px;
-  flex-wrap: wrap;
-}
-
-.recipes__iframe {
-  border: none;
-  width: 480px;
-  height: 273px;
-}
-
-.recipes__video-caption {
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 24px;
-
-}
-
-.recipes__iframe {
-  border: none;
-  width: 480px;
-  height: 273px;
-}
-
-.reservation {
-  background-color: #D9E7FF;
-  background-image: url(../images/background_reservation.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  padding-top: 100px;
-  padding-bottom: 120px;
-  display: flex;
-  flex-direction: column;
-}
-
-.reservation__title {
-  font-family: "Inter", sans-serif;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  text-align: center;
-  margin-top: 0;
-  margin-bottom: 80px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.form {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 385px;
-  width: 100%;
-}
-
-.form__fieldset {
-  border: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-}
-
-.form__label {
-  font-family: "Inter", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  margin-bottom: 8px; /* Espacio entre label e input [cite: 111] */
-  display: block;
-}
-
-.form__input {
-  width: 100%;
-  height: 60px;
-  background-color: #ffffff;
-  font-family: "Inter", sans-serif;
-  font-size: 20px;
-  line-height: 30px;
-  padding: 0px;
-  margin-bottom: 32px;
-  border: 1px solid #838383;
-  border-radius: 4px;
-  box-sizing: border-box;
-  padding-left: 10px;
-}
-
-.form__input::placeholder {
-  color: #838383;
-}
-
-.form__button {
-  width: 100%;
-  height: 60px;
-  background-color: #2F80ED;
-  color: #ffffff;
-  font-family: "Inter", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  cursor: pointer;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-top: 28px;
-  margin-bottom: 32px;
-  transition: opacity 0.3s ease;
-}
-
-.form__button:hover {
-  opacity: 0.7;
-}
-
-.form__label_type_checkbox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 0;
-  cursor: pointer;
-}
-
-.form__checkbox {
-  width: 20px;
-  height: 20px;
-  margin-right: 12px;
-  border-radius: 2px;
-}
-
-.form__checkbox-text {
-  font-family: "Inter", sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-}
+@import url("../vendor/normalize.css");
+@import url("../blocks/page.css");
+@import url("../blocks/header.css");
+@import url("../blocks/recipes.css");
+@import url("../blocks/reservation.css");
+@import url("../blocks/form.css");
+@import url("../blocks/footer.css");
