--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -9,23 +9,23 @@
   position: relative;
 }
 
-.nav__links {
-  display: flex;
-  gap: 20px;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  font-family: "Inter";
+.nav__link {
+  text-decoration: none;
+  color: #000000;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
 }
 
-.nav__link {
-  text-decoration: none;
-  color: #000000;
-  font-weight: 500;
+.nav__links {
+ list-style: none;
+ margin: 0;
+ padding: 0;
+ display: flex;
+ gap: 20px;
+
 }
 
 .nav__link:hover {
